✨ feat : 스터디에 모집완료 상태 추가 에 따른 상태 변경 제약 로직 수정 및 테스트 (#168) (#169)
* ✨ feat : 스터디에 모집완료 상태 추가 에 따른 상태 변경 제약 로직 수정 및 테스트 (#168)

- 스터디 상태에 "모집완료" 가 추가됨에 따라, 상태 변경에 대한 제약 로직을 수정하고 이를 테스트함

* 🧪 test : 스터디 편집 테스트에 상태 변경 성공 테스트 추가 (#168)